# trendforge-ai

./: .dockerignore  .gitignore  .vercelignore  DEVELOPER.md  Dockerfile  LICENSE  README.md  render.yaml  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  API.md  manage.py  passenger_wsgi.py  requirements.txt  ruff.toml  run_server.py  trendforge-backend.spec
backend/app/: __init__.py  build_info.py  config.py  main.py
backend/app/ai/: __init__.py  gemini_client.py
backend/app/api/: router.py
backend/app/core/: __init__.py  logging.py
backend/app/db/: __init__.py  migrate.py  models.py  seed.py  session.py
backend/app/prompts/: __init__.py
backend/app/schemas/: ai.py  common.py  (+1 more)
backend/tests/: conftest.py  test_backup.py  test_collectors.py  test_database.py  test_exports.py  test_prompt_engine.py  test_providers.py  test_research.py  test_settings.py  test_workflow_engine.py
docs/: DEPLOYMENT_HOSTINGER.md  DEPLOYMENT_RENDER.md  DEPLOYMENT_VERCEL.md  INSTALL.md  KNOWN_ISSUES.md  TROUBLESHOOTING.md  UPGRADE.md
frontend/: .env.production.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  routes.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/installer/: hooks.nsh  license.txt
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: backend.ps1  build_release.ps1  frontend.ps1  make_icon.py  package_deploy.ps1  setup.ps1  validate_release.ps1
(+156 files in other folders)
