[package]
name = "trendforge-ai"
version = "1.0.0"
description = "TrendForge AI - Content Intelligence Desktop Application"
authors = ["TrendForge"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "trendforge_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
